<resources>
    <string name="app_name">BillSMS</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_budget_setting">BudgetSetting</string>
    <string name="budget_label">Budget (US$)</string>
    <string name="expire_label">Expire date</string>
    <string name="notification_label">Notification</string>
    <string-array name="day_of_month">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="title_activity_expenses_details">ExpensesDetails</string>
    <string name="title_activity_add_expense">AddExpense</string>
    <string name="summary_label">Summary</string>
    <string name="date_label">Date</string>
    <string name="total_label">Total</string>
    <string name="pick_date">Set date</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_budget">keyBudget</string>
    <string name="key_notification">keyNotification</string>
    <string name="key_expire">keyExpireDate</string>
    <string name="menu_settings">Settings</string>
    <string name="expenses_label">Expenses</string>
    <string name="remaining_label">Remaining</string>
    <string name="days_left_label">day(s) left</string>
    <string name="add_expense_error_save_btn">Please, add expense amount</string>
    <string name="add_expense_error_pause">Expense not added - expense value was missing</string>
    <string name="add_expense_success">Expense added</string>
    <string name="menu_add_expense">Add Expense</string>
    <string name="menu_backup">Backup expenses</string>
    <string name="permission_denied">"If we cannot read your SMSs we cannot keep track on your expenses"</string>
    <string name="notification_message">Bill SMS</string>
    <string name="title_activity_backup">Backup expenses to Drive</string>
    <string name="backup_expenses">Backup expenses</string>
</resources>
