<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Budget">
        <EditTextPreference
            android:defaultValue="1000"
            android:inputType="text"
            android:key="@string/key_budget"
            android:singleLine="true"
            android:title="@string/budget_label" />

        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="@string/expire_label"
            android:entries="@array/pref_expire_date"
            android:entryValues="@array/pref_expire_date"
            android:key="@string/key_expire"
            android:title="@string/expire_label" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notification"
            android:title="@string/notification_label" />

    </PreferenceCategory>
</PreferenceScreen>