<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BudgetSetting"
    tools:showIn="@layout/activity_budget_setting">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_budget_setting"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/tv_budget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_budget_setting"
        android:text="@string/budget_label" />

    <EditText
        android:id="@+id/et_budget_value"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_budget_label"
        app:layout_constraintTop_toTopOf="@id/tv_budget_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_budget_label"/>


    <TextView
        android:id="@+id/tv_expire_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_budget_label"
        app:layout_constraintStart_toStartOf="@id/guideline_budget_setting"
        android:text="@string/expire_label" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_expire_label"
        app:layout_constraintTop_toTopOf="@id/tv_expire_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_expire_label">
    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:id="@+id/tv_notification_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_expire_label"
        app:layout_constraintStart_toStartOf="@id/guideline_budget_setting"
        android:text="@string/notification_label" />
    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_notification_label"
        app:layout_constraintTop_toTopOf="@id/tv_notification_label"
        app:layout_constraintBottom_toBottomOf="@id/tv_notification_label"/>


</android.support.constraint.ConstraintLayout>